--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.12",
         "mcamara/laravel-localization": "^1.8",
+        "pusher/pusher-php-server": "^7.2",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
